# covecta-tools-client

./: README.md  requirements.txt
covecta_tools/: __init__.py  auth.py  client.py  exceptions.py  models.py  pyproject.toml
docs/: facade-auth-guide.md  sdk-integration-guide.md  security-and-access-control.md
