[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covecta-tools"
version = "0.1.0"
description = "Python library for integrating with the Covecta Tools Service"
readme = "../README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Covecta Integration Hub"}
]
keywords = ["covecta", "facade", "sdk", "api", "tools", "integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "requests>=2.28.0",
    "pydantic>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/covecta/integration-hub"
Documentation = "https://github.com/covecta/integration-hub/blob/main/sdk/README.md"
Repository = "https://github.com/covecta/integration-hub"

[tool.setuptools]
packages = ["covecta_tools"]

[tool.setuptools.package-data]
covecta_tools = ["py.typed"]

